412 - QStringUnicode 001 Done. Unit tests commented, waiting for some features future features.

--- a/trunk/projects/CodeBlocks10/QuimeraEngine/Common/Common.cbp
+++ b/trunk/projects/CodeBlocks10/QuimeraEngine/Common/Common.cbp
@@ -137,6 +137,9 @@
 		<Unit filename="../../../../source/QCharUnicode.cpp">
 			<Option virtualFolder="DataTypes/" />
 		</Unit>
+		<Unit filename="../../../../source/QConstCharIterator.cpp">
+			<Option virtualFolder="DataTypes/" />
+		</Unit>
 		<Unit filename="../../../../source/QStringUnicode.cpp">
 			<Option virtualFolder="DataTypes/" />
 		</Unit>
