463 - QComparatorDefault Class implementing a generic comparator. This component will be used by algorithms and containers that allow element comparison Comitted as well unittest for it

--- a/trunk/projects/CodeBlocks10/QuimeraEngine/Tools/Tools.cbp
+++ b/trunk/projects/CodeBlocks10/QuimeraEngine/Tools/Tools.cbp
@@ -5,7 +5,7 @@
 		<Option title="Tools" />
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
-		<Option virtualFolders="Math\;Time\;" />
+		<Option virtualFolders="Math\;Containers\;Time\;" />
 		<Build>
 			<Target title="DebugLinux32SharedrtStatic">
 				<Option platforms="Unix;" />
@@ -154,6 +154,9 @@
 		</Unit>
 		<Unit filename="../../../../headers/QCircle.h">
 			<Option virtualFolder="Math/" />
+		</Unit>
+		<Unit filename="../../../../headers/QComparatorDefault.h">
+			<Option virtualFolder="Containers/" />
 		</Unit>
 		<Unit filename="../../../../headers/QDualQuaternion.h">
 			<Option virtualFolder="Math/" />
