--- a/trunk/testing/projects/CodeBlocks10/QEUnitTests/Common/Common.cbp
+++ b/trunk/testing/projects/CodeBlocks10/QEUnitTests/Common/Common.cbp
@@ -5,7 +5,7 @@
 		<Option title="Common" />
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
-		<Option virtualFolders="Tests/;Tests/DataTypes/;Tests/General/;Tests/Memory/;TestSystem (shared)/;" />
+		<Option virtualFolders="Tests\;Tests\DataTypes\;Tests\General\;Tests\Memory\;TestSystem (shared)\;" />
 		<Build>
 			<Target title="DebugLinux32SharedrtStatic">
 				<Option platforms="Unix;" />
@@ -47,7 +47,7 @@
 					<Add option="-DU_STATIC_IMPLEMENTATION" />
 				</Compiler>
 				<Linker>
-					<Add library="../../../../../bin/CodeBlocks10/DebugWin32SharedrtStatic/QuimeraEngineCommon.lib" />
+					<Add library="..\..\..\..\..\bin\CodeBlocks10\DebugWin32SharedrtStatic\QuimeraEngineCommon.lib" />
 					<Add library="libboost_unit_test_framework-mt-d.a" />
 					<Add library="libicudt.dll.a" />
 					<Add library="libicuuc.dll.a" />
@@ -75,7 +75,7 @@
 				</Compiler>
 				<Linker>
 					<Add library="libboost_unit_test_framework-mt-d.a" />
-					<Add library="../../../../../bin/CodeBlocks10/DebugWin32SharedrtDynamic/QuimeraEngineCommon.dll" />
+					<Add library="..\..\..\..\..\bin\CodeBlocks10\DebugWin32SharedrtDynamic\QuimeraEngineCommon.dll" />
 					<Add library="libicudt.dll.a" />
 					<Add library="libicuuc.dll.a" />
 					<Add directory="../../../../../3rdparty/Boost/bin/Win32/DebugSharedrtStatic" />
