410 - QPoolAllocator Implementation of QPoolAllocator class.
Fixed a missing C (#elif QE_COMPILER_GC by #elif QE_COMPILER_GCC) in aligned_alloc_q of AllocationOperators.h

--- a/trunk/testing/projects/CodeBlocks10/QEUnitTests/Common/Common.cbp
+++ b/trunk/testing/projects/CodeBlocks10/QEUnitTests/Common/Common.cbp
@@ -152,6 +152,12 @@
 		<Unit filename="../../../../tests/unit/testmodule_common/QConstCharIterator_Test.cpp">
 			<Option virtualFolder="Tests/DataTypes/" />
 		</Unit>
+		<Unit filename="../../../../tests/unit/testmodule_common/QPoolAllocatorWhiteBox.h">
+			<Option virtualFolder="Tests/Memory/" />
+		</Unit>
+		<Unit filename="../../../../tests/unit/testmodule_common/QPoolAllocator_Test.cpp">
+			<Option virtualFolder="Tests/Memory/" />
+		</Unit>
 		<Unit filename="../../../../tests/unit/testmodule_common/QStringUnicode_Test.cpp">
 			<Option virtualFolder="Tests/DataTypes/" />
 		</Unit>
