--- a/trunk/projects/CodeBlocks10/QuimeraEngine/Common/Common.cbp
+++ b/trunk/projects/CodeBlocks10/QuimeraEngine/Common/Common.cbp
@@ -6,7 +6,7 @@
 		<Option execution_dir="/home/mar/Proyectos/C++/QuimeraEngine/projects/CodeBlocks10/QuimeraEngine/" />
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
-		<Option virtualFolders="DataTypes/;Memory/;" />
+		<Option virtualFolders="DataTypes\;Memory\;" />
 		<Build>
 			<Target title="DebugLinux32SharedrtStatic">
 				<Option platforms="Unix;" />
@@ -112,6 +112,9 @@
 		<Unit filename="../../../../headers/QCharUnicode.h">
 			<Option virtualFolder="DataTypes/" />
 		</Unit>
+		<Unit filename="../../../../headers/QPoolAllocator.h">
+			<Option virtualFolder="Memory/" />
+		</Unit>
 		<Unit filename="../../../../headers/QStringUnicode.h">
 			<Option virtualFolder="DataTypes/" />
 		</Unit>
@@ -139,6 +142,9 @@
 		</Unit>
 		<Unit filename="../../../../source/QConstCharIterator.cpp">
 			<Option virtualFolder="DataTypes/" />
+		</Unit>
+		<Unit filename="../../../../source/QPoolAllocator.cpp">
+			<Option virtualFolder="Memory/" />
 		</Unit>
 		<Unit filename="../../../../source/QStringUnicode.cpp">
 			<Option virtualFolder="DataTypes/" />
