--- a/trunk/projects/VS2010/QuimeraEngine/Tools/Tools.vcxproj
+++ b/trunk/projects/VS2010/QuimeraEngine/Tools/Tools.vcxproj
@@ -223,7 +223,6 @@
     <ClInclude Include="..\..\..\..\headers\QVector4.h" />
     <ClInclude Include="..\..\..\..\headers\SQAngle.h" />
     <ClInclude Include="..\..\..\..\headers\SQPoint.h" />
-    <ClInclude Include="..\..\..\..\headers\ToolsExports.h" />
     <ClInclude Include="..\..\..\..\headers\ToolsDefinitions.h" />
   </ItemGroup>
   <ItemGroup>
@@ -231,41 +230,56 @@
     <ClCompile Include="..\..\..\..\source\EQSpaceRelation.cpp" />
     <ClCompile Include="..\..\..\..\source\EQTreeTraversalOrder.cpp" />
     <ClCompile Include="..\..\..\..\source\QBaseDualQuaternion.cpp" />
+    <ClCompile Include="..\..\..\..\source\QBaseHexahedron.cpp" />
+    <ClCompile Include="..\..\..\..\source\QBaseLineSegment.cpp" />
     <ClCompile Include="..\..\..\..\source\QBaseMatrix2x2.cpp" />
     <ClCompile Include="..\..\..\..\source\QBaseMatrix3x3.cpp" />
     <ClCompile Include="..\..\..\..\source\QBaseMatrix3x4.cpp" />
     <ClCompile Include="..\..\..\..\source\QBaseMatrix4x3.cpp" />
     <ClCompile Include="..\..\..\..\source\QBaseMatrix4x4.cpp" />
+    <ClCompile Include="..\..\..\..\source\QBaseOrb.cpp" />
     <ClCompile Include="..\..\..\..\source\QBasePlane.cpp" />
     <ClCompile Include="..\..\..\..\source\QBaseQuadrilateral.cpp" />
     <ClCompile Include="..\..\..\..\source\QBaseQuaternion.cpp" />
+    <ClCompile Include="..\..\..\..\source\QBaseRay.cpp" />
+    <ClCompile Include="..\..\..\..\source\QBaseTriangle.cpp" />
     <ClCompile Include="..\..\..\..\source\QBaseVector2.cpp" />
     <ClCompile Include="..\..\..\..\source\QBaseVector3.cpp" />
     <ClCompile Include="..\..\..\..\source\QBaseVector4.cpp" />
     <ClCompile Include="..\..\..\..\source\QCircle.cpp" />
     <ClCompile Include="..\..\..\..\source\QDualQuaternion.cpp" />
+    <ClCompile Include="..\..\..\..\source\QHexahedron.cpp" />
+    <ClCompile Include="..\..\..\..\source\QLineSegment.cpp" />
     <ClCompile Include="..\..\..\..\source\QLineSegment2D.cpp" />
+    <ClCompile Include="..\..\..\..\source\QLineSegment3D.cpp" />
     <ClCompile Include="..\..\..\..\source\QMatrix2x2.cpp" />
     <ClCompile Include="..\..\..\..\source\QMatrix3x3.cpp" />
     <ClCompile Include="..\..\..\..\source\QMatrix3x4.cpp" />
     <ClCompile Include="..\..\..\..\source\QMatrix4x3.cpp" />
     <ClCompile Include="..\..\..\..\source\QMatrix4x4.cpp" />
+    <ClCompile Include="..\..\..\..\source\QOrb.cpp" />
     <ClCompile Include="..\..\..\..\source\QPlane.cpp" />
     <ClCompile Include="..\..\..\..\source\QQuadrilateral.cpp" />
     <ClCompile Include="..\..\..\..\source\QQuaternion.cpp" />
+    <ClCompile Include="..\..\..\..\source\QRay.cpp" />
     <ClCompile Include="..\..\..\..\source\QRay2D.cpp" />
+    <ClCompile Include="..\..\..\..\source\QRay3D.cpp" />
     <ClCompile Include="..\..\..\..\source\QRotationMatrix3x3.cpp" />
     <ClCompile Include="..\..\..\..\source\QScalingMatrix3x3.cpp" />
     <ClCompile Include="..\..\..\..\source\QSpaceConversionMatrix.cpp" />
     <ClCompile Include="..\..\..\..\source\QTimeSpan.cpp" />
+    <ClCompile Include="..\..\..\..\source\QSphere.cpp" />
+    <ClCompile Include="..\..\..\..\source\QTransformationMatrix.cpp" />
     <ClCompile Include="..\..\..\..\source\QTransformationMatrix3x3.cpp" />
+    <ClCompile Include="..\..\..\..\source\QTranslationMatrix.cpp" />
+    <ClCompile Include="..\..\..\..\source\QTriangle.cpp" />
     <ClCompile Include="..\..\..\..\source\QTriangle2D.cpp" />
+    <ClCompile Include="..\..\..\..\source\QTriangle3D.cpp" />
     <ClCompile Include="..\..\..\..\source\QVector2.cpp" />
     <ClCompile Include="..\..\..\..\source\QVector3.cpp" />
     <ClCompile Include="..\..\..\..\source\QVector4.cpp" />
     <ClCompile Include="..\..\..\..\source\SQAngle.cpp" />
     <ClCompile Include="..\..\..\..\source\SQPoint.cpp" />
-    <ClCompile Include="..\..\..\..\source\ToolsExports.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
