--- a/trunk/testing/projects/CodeBlocks10/QEUnitTests/Common/Common.cbp
+++ b/trunk/testing/projects/CodeBlocks10/QEUnitTests/Common/Common.cbp
@@ -32,6 +32,7 @@
 				</Linker>
 				<ExtraCommands>
 					<Add after='cp &quot;$(TARGET_OUTPUT_DIR)../../TestConfig.txt&quot; &quot;$(TARGET_OUTPUT_DIR)&quot;' />
+					<Add after='cp &quot;$(TARGET_OUTPUT_DIR)../../NormalizationTest.txt&quot; &quot;$(TARGET_OUTPUT_DIR)&quot;' />
 				</ExtraCommands>
 			</Target>
 			<Target title="DebugWin32SharedrtStatic">
@@ -57,6 +58,7 @@
 				</Linker>
 				<ExtraCommands>
 					<Add after='cmd /c copy &quot;$(TARGET_OUTPUT_DIR)..\..\TestConfig.txt&quot; &quot;$(TARGET_OUTPUT_DIR)&quot; /Y' />
+					<Add after='cmd /c copy &quot;$(TARGET_OUTPUT_DIR)..\..\NormalizationTest.txt&quot; &quot;$(TARGET_OUTPUT_DIR)&quot; /Y' />
 					<Add after='cmd /c copy &quot;$(TARGET_OUTPUT_DIR)..\..\..\..\3rdparty\ICU\bin\Win32\ReleaseSharedrtDynamic\MinGW\*.dll&quot; &quot;$(TARGET_OUTPUT_DIR)&quot; /Y' />
 					<Mode after="always" />
 				</ExtraCommands>
@@ -83,6 +85,7 @@
 				</Linker>
 				<ExtraCommands>
 					<Add after='cmd /c copy &quot;$(TARGET_OUTPUT_DIR)..\..\TestConfig.txt&quot; &quot;$(TARGET_OUTPUT_DIR)&quot; /Y' />
+					<Add after='cmd /c copy &quot;$(TARGET_OUTPUT_DIR)..\..\NormalizationTest.txt&quot; &quot;$(TARGET_OUTPUT_DIR)&quot; /Y' />
 					<Add after='cmd /c copy &quot;$(TARGET_OUTPUT_DIR)..\..\..\..\bin\CodeBlocks10\$(TARGET_NAME)\QuimeraEngineCommon.dll&quot; &quot;$(TARGET_OUTPUT_DIR)&quot; /Y' />
 					<Add after='cmd /c copy &quot;$(TARGET_OUTPUT_DIR)..\..\..\..\3rdparty\ICU\bin\Win32\ReleaseSharedrtDynamic\MinGW\*.dll&quot; &quot;$(TARGET_OUTPUT_DIR)&quot; /Y' />
 					<Mode after="always" />
@@ -116,6 +119,7 @@
 					<Add before='cp &quot;$(TARGET_OUTPUT_DIR)../../../../bin/CodeBlocks10/$(TARGET_NAME)/libQuimeraEngineCommon.so&quot; &quot;$(TARGET_OUTPUT_DIR)&quot;' />
 					<Add before='cp &quot;$(TARGET_OUTPUT_DIR)../../../../bin/CodeBlocks10/$(TARGET_NAME)/libQuimeraEngineCommon.so&quot; &quot;.&quot;' />
 					<Add after='cp &quot;$(TARGET_OUTPUT_DIR)../../TestConfig.txt&quot; &quot;$(TARGET_OUTPUT_DIR)&quot;' />
+					<Add after='cp &quot;$(TARGET_OUTPUT_DIR)../../NormalizationTest.txt&quot; &quot;$(TARGET_OUTPUT_DIR)&quot;' />
 					<Add after="rm *.so" />
 					<Mode after="always" />
 				</ExtraCommands>
@@ -136,6 +140,9 @@
 		</Compiler>
 		<Unit filename="../../../../tests/unit/testmodule_common/AllocationOperators_Test.cpp">
 			<Option virtualFolder="Tests/Memory/" />
+		</Unit>
+		<Unit filename="../../../../tests/unit/testmodule_common/CommonTestDefinitions.h">
+			<Option virtualFolder="Tests/" />
 		</Unit>
 		<Unit filename="../../../../tests/unit/testmodule_common/EQEnumerationMock.h">
 			<Option virtualFolder="Tests/General/" />
@@ -175,6 +182,9 @@
 		</Unit>
 		<Unit filename="../../../../tests/unit/testmodule_common/TestModule_Common.cpp">
 			<Option virtualFolder="Tests/" />
+		</Unit>
+		<Unit filename="../../../../tests/unit/testmodule_common/UnicodeNormalizationTestData.h">
+			<Option virtualFolder="Tests/DataTypes/" />
 		</Unit>
 		<Unit filename="../../../../testsystem/CommonConfigDefinitions.h">
 			<Option virtualFolder="TestSystem (shared)/" />
